[gd_scene load_steps=9 format=3 uid="uid://8l3ib1q50336"]

[ext_resource type="Script" path="res://UI/GUI.gd" id="1_y8l8i"]
[ext_resource type="Texture2D" uid="uid://bs6of2p5qif17" path="res://assets/topdown-shooter/Spritesheet/spritesheet_tiles.png" id="2_s5kis"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_afukn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fd3pq"]
bg_color = Color(0.192157, 0.184314, 0.196078, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_detail = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpume"]
bg_color = Color(0.572549, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ngigv"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_43fid"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_bkror"]
font_size = 32

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_y8l8i")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="DebugSector" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Filler2" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Filler" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MedkitSector" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Medkit3" type="HBoxContainer" parent="MarginContainer/Rows/TopRow/MedkitSector"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 2

[node name="Node2D" type="Node2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit3"]

[node name="Sprite2D2" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit3/Node2D"]
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1776, 1342, 64, 44)

[node name="Sprite2D3" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit3/Node2D"]
rotation = 1.5708
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1364, 492, 28, 6)

[node name="Sprite2D4" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit3/Node2D"]
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1364, 492, 28, 6)

[node name="Medkit2" type="HBoxContainer" parent="MarginContainer/Rows/TopRow/MedkitSector"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 2

[node name="Node2D" type="Node2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit2"]

[node name="Sprite2D2" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit2/Node2D"]
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1776, 1342, 64, 44)

[node name="Sprite2D3" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit2/Node2D"]
rotation = 1.5708
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1364, 492, 28, 6)

[node name="Sprite2D4" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit2/Node2D"]
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1364, 492, 28, 6)

[node name="Medkit1" type="HBoxContainer" parent="MarginContainer/Rows/TopRow/MedkitSector"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 2

[node name="Node2D" type="Node2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit1"]

[node name="Sprite2D2" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit1/Node2D"]
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1776, 1342, 64, 44)

[node name="Sprite2D3" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit1/Node2D"]
rotation = 1.5708
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1364, 492, 28, 6)

[node name="Sprite2D4" type="Sprite2D" parent="MarginContainer/Rows/TopRow/MedkitSector/Medkit1/Node2D"]
texture = ExtResource("2_s5kis")
region_enabled = true
region_rect = Rect2(1364, 492, 28, 6)

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 4

[node name="HealthSector" type="CenterContainer" parent="MarginContainer/Rows/BottomRow"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HealthSector"]
material = SubResource("CanvasItemMaterial_afukn")
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_fd3pq")
theme_override_styles/fill = SubResource("StyleBoxFlat_rpume")
value = 75.0
show_percentage = false

[node name="AmmoSector" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSector"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_ngigv")

[node name="AmmoSpacing" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSector"]
layout_mode = 2
text = " / "
label_settings = SubResource("LabelSettings_43fid")

[node name="MaxAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSector"]
layout_mode = 2
text = "20"
label_settings = SubResource("LabelSettings_bkror")
